# hostspilot

./: BUILD_GUIDE.md  LICENSE  README.md  package-lock.json  package.json  run-dev-admin.ps1  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  hostspilot.exe.manifest  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: HostsEditor.svelte
src/routes/: +page.svelte
