[package]
name = "hostspilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[package.metadata.winres]
OriginalFilename = "hostspilot.exe"
LegalCopyright = "Copyright © 2025 Vladimir Strycek"
ProductName = "HostsPilot"
FileDescription = "HostsPilot - Manage your hosts files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hostspilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization (slower compile, smaller binary)
strip = true        # Strip debug symbols
panic = "abort"     # Reduce binary size by removing unwinding code
